# filmweb-export-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build_release.yml  release.yml
src/: error.rs  lib.rs  main.rs
