[package]
name = "filmweb-export-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["derive"] }
colored = "2.0.0"
csv = "1.1"
html5ever = "*"
regex = "1.5"
reqwest = { version = "0.11", features = ["json", "cookies", "gzip"] }
scraper = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
