[package]
name = "filmweb-export-rs"
authors = ["Remigiusz M. <remigiusz.micielski@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
flume = "0.10"
futures = "0.3"
colored = "2.0"
csv = "1.1"
html5ever = "0.26"
regex = "1.5"
priority-queue = "1.2"
reqwest = { version = "0.11", features = ["blocking", "json", "cookies", "gzip"] }
scraper = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
rayon = "1.5"
log = "0.4"
lazy_static = "1.4"
env_logger = "0.9"
thiserror = "1.0"
anyhow = "1.0"
