[package]
name = "filmweb-export-rs"
authors = ["Remigiusz M. <remigiusz.micielski@gmail.com>"]
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
filmweb-api = { git = "https://github.com/micielski/filmweb-api-rs" }
colored = "2.0"
csv = "1.1"
env_logger = "0.9"
flume = "0.10"
lazy_static = "1.4"
log = "0.4"
rayon = "1.5"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "cookies", "gzip", "rustls-tls"] }
scraper = "0.13"
